feat(auth): add docs swagger
